<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandDataEntryActivity">

    <TextView
        android:id="@+id/textlandtitle"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/landTitle"
        android:textColor="@color/title_bar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textlandtype"
        android:layout_width="149dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/landType" />

    <Spinner
        android:id="@+id/spinnerLandType"
        android:layout_width="252dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp" />

    <TextView
        android:id="@+id/textlandaddress"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:text="@string/land_address" />

    <Spinner
        android:id="@+id/spinnerLandAddress"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp" />

    <TextView
        android:id="@+id/textlandextent"
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:text="@string/land_extent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:ems="10"
        android:hint="@string/hectares"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerLand"
        android:layout_width="89dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:text="@string/Previous" />
</RelativeLayout>