<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".DataViewMain">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/view_data_entry_details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/dataview" />

    <Button
        android:id="@+id/btnCropData"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/crop_data" />

    <Button
        android:id="@+id/btnLandData"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/land_data" />
</LinearLayout>