<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".officer_login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="375dp"
        android:layout_height="77dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/aims_mobile"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="221dp"
        android:layout_height="220dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emblem2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="283dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_weight="1"
            android:background="@drawable/data_entry_button"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:background="@drawable/data_entry_button"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="7dp"
            android:layout_marginTop="70px"
            android:layout_weight="1"
            android:background="@drawable/data_entry_button"
            android:text="@string/submit" />
    </LinearLayout>
    <![CDATA[>

    ]]>
</androidx.constraintlayout.widget.ConstraintLayout>