<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DataEntrySuccessful">

    <ImageView
        android:id="@+id/imageViewSuccess"
        android:layout_width="192dp"
        android:layout_height="136dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/success" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="346dp"
        android:layout_height="78dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center_vertical"
        android:text="@string/sucessful"
        android:textColor="@color/title_bar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="50dp" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/data_entry_button"
        android:text="@string/data_entry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSuccess" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/data_entry_button"
        android:text="@string/add_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHome" />
</androidx.constraintlayout.widget.ConstraintLayout>